# CsgRenderer

./: CMakeLists.txt  README.md  top-shader-build.sh
src/wololo/: app.c  app.h  config.h  glfw.h  platform.h  wmath.decl.h  wmath.h  wmath.impl.h  wololo.h
src/wololo/renderer/: renderer.c  renderer.h  shader-build.bat  shader-build.sh  ubershader1.frag  ubershader1.frag.spv  ubershader1.vert  ubershader1.vert.spv
src/wololo_demo/: main.c
